open localization: update handback repo

--- a/ol-archive/dotnet/docs.it-it/master/dotnet-core/dotnet-build.49fca737e1e9cf15e960c32f3dee6836c99b8799.it-it.xlf
+++ b/ol-archive/dotnet/docs.it-it/master/dotnet-core/dotnet-build.49fca737e1e9cf15e960c32f3dee6836c99b8799.it-it.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">3cb552590bf45ec73d84cc902a505b3048301b9f</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bb64da75a2e7bc2d379bc1685b4187493792db78</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\dotnet-build.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">665953dbb10d047730d1ec215055faa418c59f29</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">40eeb4cd3e079a3901c0f1aa04b47d50414a905f</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">fcbb414aa80c253762d2601cc4d484f1ab8d8539</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8eefa0949873617783ce1bac425bf8d5a239dfc1</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>This topic applies to .NET Core Tools Preview 2.</source>
           <target state="translated">Questo argomento si applica agli strumenti dell'anteprima 2 di .NET Core.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the  Visual Studio 2017 RC - .NET Core Tools Preview 4 version, see the <bpt id="p1">[</bpt>dotnet-build (Tooling Preview 4)<ept id="p1">](../preview3/tools/dotnet-build.md)</ept> topic.</source>
-          <target state="translated">Per gli strumenti dell'anteprima 4 di .NET Core (Visual Studio 2017 RC), vedere l'argomento <bpt id="p1">[</bpt>dotnet-build (strumenti dell'anteprima 4)<ept id="p1">](../preview3/tools/dotnet-build.md)</ept>.</target>       </trans-unit>
+          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>dotnet-build (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/dotnet-build.md)</ept> topic.</source>
+          <target state="translated">Per gli strumenti di .NET Core versione RC4, vedere l'argomento <bpt id="p1">[</bpt>dotnet-build (strumenti di .NET Core RC4)<ept id="p1">](../preview3/tools/dotnet-build.md)</ept>.</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Name</source>
           <target state="translated">Nome</target>       </trans-unit>
