--- a/ol-archive/dotnet/docs.it-it/master/dotnet-core/dotnet-new.550175068e0117eda5c92441e0fcdb910097125b.it-it.xlf
+++ b/ol-archive/dotnet/docs.it-it/master/dotnet-core/dotnet-new.550175068e0117eda5c92441e0fcdb910097125b.it-it.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d4ca76f3de38b5d05868292d5c4bb8e3b0c7fdf2</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f0c62647c5817db2057c60a7a95a62f08f7889a5</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-new.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">387adf765214dfa3b2fbe827bfbd62f6346c9fdd</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">33ab04767e9b59d18373121ce8014ecf71b9fb83</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5294b49b50de10e3f91f51920deea9eb0cc088e5</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9405a412a93e74394f2034c9cd1abbba59dbec8e</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -22,11 +22,11 @@
           <source>dotnet-new, CLI, CLI command, .NET Core</source>
           <target state="translated">dotnet-new, interfaccia della riga di comando, comando dell'interfaccia della riga di comando, .NET Core</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
-          <source>dotnet-new (Tooling Preview 4)</source>
-          <target state="translated">dotnet-new (strumenti dell'anteprima 4)</target>       </trans-unit>
+          <source>dotnet-new (.NET Core Tools RC4)</source>
+          <target state="translated">dotnet-new (Strumenti di .NET Core RC4)</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to Visual Studio 2017 RC - .NET Core Tools Preview 4.</source>
-          <target state="translated">Questo argomento si applica agli strumenti dell'anteprima 4 di .NET Core (Visual Studio 2017 RC).</target>       </trans-unit>
+          <source>This topic applies to .NET Core Tools RC4.</source>
+          <target state="translated">Questo argomento si applica agli strumenti di .NET Core RC4.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>For the .NET Core Tools Preview 2 version, see the <bpt id="p1">[</bpt>dotnet-new<ept id="p1">](../../tools/dotnet-new.md)</ept> topic.</source>
           <target state="translated">Per gli strumenti dell'anteprima 2 di .NET Core, vedere l'argomento <bpt id="p1">[</bpt>dotnet-new<ept id="p1">](../../tools/dotnet-new.md)</ept>.</target>       </trans-unit>
@@ -34,8 +34,8 @@
           <source>Name</source>
           <target state="translated">Nome</target>       </trans-unit>
         <trans-unit id="108" translate="yes" xml:space="preserve">
-          <source>dotnet-new -- Creates a new .NET Core project in the current directory.</source>
-          <target state="translated">dotnet-new: consente di creare un nuovo progetto .NET Core nella directory corrente.</target>       </trans-unit>
+          <source>dotnet-new - Creates a new .NET Core project in the current directory</source>
+          <target state="translated">dotnet-new: consente di creare un nuovo progetto .NET Core nella directory corrente</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
           <source>Synopsis</source>
           <target state="translated">Riepilogo</target>       </trans-unit>
@@ -43,56 +43,122 @@
           <source>Description</source>
           <target state="translated">Descrizione</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>The <ph id="ph1">`dotnet new`</ph> command provides a convenient way to initialize a valid .NET Core project and sample source code to try out the Command Line Interface (CLI) toolset.</source>
+          <source>The <ph id="ph1">`dotnet new`</ph> command provides a convenient way to initialize a valid .NET Core project and sample source code to try out the Command-line interface (CLI) toolset.</source>
           <target state="translated">Il comando <ph id="ph1">`dotnet new`</ph> rappresenta un modo pratico per inizializzare un progetto .NET Core valido e include l'esempio di codice sorgente per provare il set di strumenti dell'interfaccia della riga di comando.</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>This command is invoked in the context of a directory.</source>
           <target state="translated">Questo comando viene richiamato nel contesto di una directory.</target>       </trans-unit>
         <trans-unit id="113" translate="yes" xml:space="preserve">
-          <source>When invoked, the command will result in two main artifacts being dropped to the current directory:</source>
-          <target state="translated">Quando richiamato, il comando avrà come risultato il rilascio dei due elementi principali nella directory corrente:</target>       </trans-unit>
+          <source>When invoked, the command will scaffold out the resources and files according to the template and options passed into the command.</source>
+          <target state="translated">Quando viene richiamato, il comando eseguirà lo scaffolding delle risorse e dei file in base al modello e alle opzioni passate al comando.</target>       </trans-unit>
         <trans-unit id="114" translate="yes" xml:space="preserve">
-          <source>A <ph id="ph1">`Program.cs`</ph> (or <ph id="ph2">`Program.fs`</ph>) file that contains a sample "Hello World" program.</source>
-          <target state="translated">Un file <ph id="ph1">`Program.cs`</ph> (o <ph id="ph2">`Program.fs`</ph>) contenente un programma "Hello World" di esempio.</target>       </trans-unit>
-        <trans-unit id="115" translate="yes" xml:space="preserve">
-          <source>A valid csproj project file.</source>
-          <target state="translated">Un file di progetto csproj valido.</target>       </trans-unit>
-        <trans-unit id="116" translate="yes" xml:space="preserve">
           <source>After this, the project is ready to be compiled and/or edited further.</source>
           <target state="translated">Dopo questa operazione, il progetto è pronto per essere compilato e/o ulteriormente modificato.</target>       </trans-unit>
+        <trans-unit id="115" translate="yes" xml:space="preserve">
+          <source>Arguments</source>
+          <target state="translated">Argomenti</target>       </trans-unit>
+        <trans-unit id="116" translate="yes" xml:space="preserve">
+          <source>template - The template to instansiate when the command is invoked.</source>
+          <target state="translated">template: modello di cui creare un'istanza quando viene richiamato il comando.</target>       </trans-unit>
         <trans-unit id="117" translate="yes" xml:space="preserve">
+          <source>The command contains a default list of templates; use <ph id="ph1">`dotnet new --help`</ph>.</source>
+          <target state="translated">Il comando contiene un elenco predefinito di modelli. Usare <ph id="ph1">`dotnet new --help`</ph>.</target>       </trans-unit>
+        <trans-unit id="118" translate="yes" xml:space="preserve">
           <source>Options</source>
           <target state="translated">Opzioni</target>       </trans-unit>
-        <trans-unit id="118" translate="yes" xml:space="preserve">
-          <source>Prints out a short help for the command.</source>
-          <target state="translated">Stampa una breve guida per il comando.</target>       </trans-unit>
         <trans-unit id="119" translate="yes" xml:space="preserve">
-          <source>Language of the project.</source>
-          <target state="translated">Linguaggio del progetto.</target>       </trans-unit>
+          <source>List templates containing the specified name.</source>
+          <target state="translated">Elenca i modelli contenenti il nome specificato.</target>       </trans-unit>
         <trans-unit id="120" translate="yes" xml:space="preserve">
-          <source>Defaults to <ph id="ph1">`C#`</ph>.</source>
-          <target state="translated">Il valore predefinito è <ph id="ph1">`C#`</ph>.</target>       </trans-unit>
+          <source>Specifies the language of the template to create</source>
+          <target state="translated">Specifica il linguaggio del modello da creare.</target>       </trans-unit>
         <trans-unit id="121" translate="yes" xml:space="preserve">
-          <source>Other valid values are <ph id="ph1">`csharp`</ph> and <ph id="ph2">`cs`</ph>.</source>
-          <target state="translated">Altri valori validi sono <ph id="ph1">`csharp`</ph> e <ph id="ph2">`cs`</ph>.</target>       </trans-unit>
+          <source>The name for the output being created.</source>
+          <target state="translated">Nome per l'output da creare.</target>       </trans-unit>
         <trans-unit id="122" translate="yes" xml:space="preserve">
-          <source>Type of the project.</source>
-          <target state="translated">Tipo di progetto.</target>       </trans-unit>
+          <source>If no name is specified, the name of the current directory is used.</source>
+          <target state="translated">Se non viene specificato alcun nome, viene usato il nome della directory corrente.</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
-          <source>Valid values for C# are <ph id="ph1">`console`</ph>, <ph id="ph2">`web`</ph>, <ph id="ph3">`lib`</ph> and <ph id="ph4">`xunittest`</ph> and for F# only <ph id="ph5">`console`</ph> is valid.</source>
-          <target state="translated">I valori validi per C# sono <ph id="ph1">`console`</ph>, <ph id="ph2">`web`</ph>, <ph id="ph3">`lib`</ph> e <ph id="ph4">`xunittest`</ph>, mentre per F# è valido solo <ph id="ph5">`console`</ph>.</target>       </trans-unit>
+          <source>Location to place the generated output.</source>
+          <target state="translated">Percorso in cui posizionare l'output generato.</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
+          <source>Shows all templates for a specific type of project.</source>
+          <target state="translated">Mostra tutti i modelli per un tipo specifico di progetto.</target>       </trans-unit>
+        <trans-unit id="125" translate="yes" xml:space="preserve">
+          <source>Prints out help for the command.</source>
+          <target state="translated">Stampa la Guida per il comando.</target>       </trans-unit>
+        <trans-unit id="126" translate="yes" xml:space="preserve">
+          <source>Template options</source>
+          <target state="translated">Opzioni del modello</target>       </trans-unit>
+        <trans-unit id="127" translate="yes" xml:space="preserve">
+          <source>Each project template may have additional options available.</source>
+          <target state="translated">Per ogni modello di progetto potrebbero essere disponibili opzioni aggiuntive.</target>       </trans-unit>
+        <trans-unit id="128" translate="yes" xml:space="preserve">
+          <source>The core templates, for example, have the following.</source>
+          <target state="translated">I modelli principali, ad esempio, includono le opzioni seguenti.</target>       </trans-unit>
+        <trans-unit id="129" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>console, xunit, mstest<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>console, xunit, mstest<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="130" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph>: specifica il framework di destinazione.</target>       </trans-unit>
+        <trans-unit id="131" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">Valori : netcoreapp1.0 o netcoreapp1.1 (valore predefinito: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="132" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>web, webapi<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>web, webapi<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="133" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph>: specifica il framework di destinazione.</target>       </trans-unit>
+        <trans-unit id="134" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">Valori : netcoreapp1.0 o netcoreapp1.1 (valore predefinito: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="135" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>mvc<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>mvc<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="136" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph>: specifica il framework di destinazione.</target>       </trans-unit>
+        <trans-unit id="137" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0 or netcoreapp1.1 (Default: netcoreapp1.0)</source>
+          <target state="translated">Valori : netcoreapp1.0 o netcoreapp1.1 (valore predefinito: netcoreapp1.0)</target>       </trans-unit>
+        <trans-unit id="138" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-au|--authentication`</ph> -  The type of authentication to use.</source>
+          <target state="translated"><ph id="ph1">`-au|--authentication`</ph>: tipo di autenticazione da usare.</target>       </trans-unit>
+        <trans-unit id="139" translate="yes" xml:space="preserve">
+          <source>Values: None or Individual (Default: None)</source>
+          <target state="translated">Valori: None o Individual (valore predefinito: None)</target>       </trans-unit>
+        <trans-unit id="140" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-uld|--use-local-db`</ph> - Whether or not to use LocalDB instead of SQLite.</source>
+          <target state="translated"><ph id="ph1">`-uld|--use-local-db`</ph>: se usare o meno LocalDB invece di SQLite.</target>       </trans-unit>
+        <trans-unit id="141" translate="yes" xml:space="preserve">
+          <source>Values: true or false (Default: false)</source>
+          <target state="translated">Valori: true o false (valore predefinito: false)</target>       </trans-unit>
+        <trans-unit id="142" translate="yes" xml:space="preserve">
+          <source><bpt id="p1">**</bpt>classlib<ept id="p1">**</ept></source>
+          <target state="translated"><bpt id="p1">**</bpt>classlib<ept id="p1">**</ept></target>       </trans-unit>
+        <trans-unit id="143" translate="yes" xml:space="preserve">
+          <source><ph id="ph1">`-f|--framework`</ph> - Specifies which framework to target.</source>
+          <target state="translated"><ph id="ph1">`-f|--framework`</ph>: specifica il framework di destinazione.</target>       </trans-unit>
+        <trans-unit id="144" translate="yes" xml:space="preserve">
+          <source>Values: netcoreapp1.0, netcoreapp1.1 and netstandard1.0 - 1.6 (Default: netstandard1.4).</source>
+          <target state="translated">Valori: netcoreapp1.0, netcoreapp1.1 e netstandard1.0 - 1.6 (valore predefinito: netstandard1.4).</target>       </trans-unit>
+        <trans-unit id="145" translate="yes" xml:space="preserve">
           <source>Examples</source>
           <target state="translated">Esempi</target>       </trans-unit>
-        <trans-unit id="125" translate="yes" xml:space="preserve">
-          <source>Create a C# console application project in the current directory:</source>
-          <target state="translated">Creare un progetto di applicazione console C# nella directory corrente:</target>       </trans-unit>
-        <trans-unit id="126" translate="yes" xml:space="preserve">
-          <source><ph id="ph1">`dotnet new`</ph> or <ph id="ph2">`dotnet new --lang c#`</ph></source>
-          <target state="translated"><ph id="ph1">`dotnet new`</ph> o <ph id="ph2">`dotnet new --lang c#`</ph></target>       </trans-unit>
-        <trans-unit id="127" translate="yes" xml:space="preserve">
-          <source>Create a new ASP.NET Core C# application project in the current directory:</source>
-          <target state="translated">Creare un nuovo progetto di applicazione console ASP.NET Core C# nella directory corrente:</target>       </trans-unit>
+        <trans-unit id="146" translate="yes" xml:space="preserve">
+          <source>Create a F# console application project in the current directory:</source>
+          <target state="translated">Creare un progetto di applicazione console F# nella directory corrente:</target>       </trans-unit>
+        <trans-unit id="147" translate="yes" xml:space="preserve">
+          <source>Create a new ASP.NET Core C# MVC application project in the current directory with no authentication targeting .NET Core 1.0:</source>
+          <target state="translated">Creare un nuovo progetto di applicazione MVC ASP.NET Core C# nella directory corrente senza autenticazione con destinazione .NET Core 1.0:</target>       </trans-unit>
+        <trans-unit id="148" translate="yes" xml:space="preserve">
+          <source>Create a new XUnit application targeting .NET Core 1.1:</source>
+          <target state="translated">Creare una nuova applicazione XUnit con destinazione .NET Core 1.1:</target>       </trans-unit>
+        <trans-unit id="149" translate="yes" xml:space="preserve">
+          <source>List all templates available for MVC:</source>
+          <target state="translated">Elencare tutti i modelli disponibili per MVC:</target>       </trans-unit>
       </group>
     </body>
   </file>
