--- a/ol-archive/dotnet/docs.it-it/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.it-it.xlf
+++ b/ol-archive/dotnet/docs.it-it/master/dotnet-core/contributing.d09c5cb84aedfebcb439768c30f4d13a637536cd.it-it.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">165bd62dc8447de18f66098e00d8c59c0f7fd0b0</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">98f7ab06ef34efd9759d7b8300893a0a81ad5d7e</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\contributing.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">4f468e8882824f8cedbe5dcae2da2bd16e347b1d</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b009e7de75c2cbe37188399922004d809018de4c</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">80c60505891850bd8c062806b8a2c305e45f28ec</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">03e7d6d475faf86afa0a59c0b028e8561fc28ad4</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -16,11 +16,11 @@
           <source>Using the preview3 folder and sub-folders</source>
           <target state="translated">Uso della cartella preview3 e delle relative sottocartelle</target>       </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core tooling Preview 4 release.</source>
-          <target state="translated">Questa cartella è il nodo di primo livello corrispondente alla cartella degli strumenti, ma contiene elementi differenziali per la versione di anteprima 4 degli strumenti di .NET Core.</target>       </trans-unit>
+          <source>This folder is the top-level node that matches the tools folder, but contains deltas for the .NET Core Tools RC4 release.</source>
+          <target state="translated">Questa cartella è il nodo di primo livello corrispondente alla cartella degli strumenti, ma contiene elementi differenziali per la versione RC4 degli strumenti di .NET Core.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
-          <source>The goal of this separate parallel folder structure is to provide a location for the Preview 4 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
-          <target state="translated">L'obiettivo di questa struttura di cartelle parallele separate è offrire un'area per i contenuti della versione di anteprima 4 che possono essere uniti in modo relativamente semplice nella struttura principale nel passaggio da una versione all'altra nel sito pubblicato.</target>       </trans-unit>
+          <source>The goal of this separate parallel folder structure is to provide a location for the RC4 release related content that can be relatively easily merged into the main structure when provide version switching in the published site.</source>
+          <target state="translated">L'obiettivo di questa struttura di cartelle parallele separate è offrire un'area per i contenuti della versione RC4 che possono essere uniti in modo relativamente semplice nella struttura principale nel passaggio da una versione all'altra nel sito pubblicato.</target>       </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
           <source>The content under this node should be a smaller document set that represents the deltas from the Long Term Support (LTS) release and the latest current release.</source>
           <target state="translated">Il contenuto di questo nodo deve essere un set di documenti di dimensioni inferiori che rappresenta gli elementi differenziali tra la versione LTS (Long Term Support) e quella corrente.</target>       </trans-unit>
@@ -37,14 +37,14 @@
           <source>Copy the existing content into a parallel folder under this structure.</source>
           <target state="translated">Copiare il contenuto esistente in una cartella parallela in questa struttura.</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>Make your changes, and add the modified file to the TOC for the Preview 4 release.</source>
-          <target state="translated">Apportare le modifiche e aggiungere il file modificato al sommario della versione di anteprima 4.</target>       </trans-unit>
+          <source>Make your changes, and add the modified file to the TOC for the RC4 release.</source>
+          <target state="translated">Apportare le modifiche e aggiungere il file modificato al sommario della versione RC4.</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
           <source>New documents</source>
           <target state="translated">Nuovi documenti</target>       </trans-unit>
         <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>Put the new document in the proper location, and add it to the TOC under the node for the Preview 4 release.</source>
-          <target state="translated">Inserire il nuovo documento nella posizione appropriata e aggiungerlo al sommario sotto il nodo della versione di anteprima 4.</target>       </trans-unit>
+          <source>Put the new document in the proper location, and add it to the TOC under the node for the RC4 release.</source>
+          <target state="translated">Inserire il nuovo documento nella posizione appropriata e aggiungerlo al sommario nel nodo per la versione RC4.</target>       </trans-unit>
         <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>All current release files should have the following added near the top of the topic:</source>
           <target state="translated">Tutti i file di rilascio correnti devono aggiungere quanto segue nella parte superiore dell'argomento:</target>       </trans-unit>
