--- a/ol-archive/dotnet/docs.it-it/master/dotnet-core/dotnet-migrate.d9476f7aea9d488b184aabc928b47621ce21ad65.it-it.xlf
+++ b/ol-archive/dotnet/docs.it-it/master/dotnet-core/dotnet-migrate.d9476f7aea9d488b184aabc928b47621ce21ad65.it-it.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-4a95368" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8d83b3f013ecdc1fbf92598a81dfe3a7a2d17054</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">57ae01419c6f7a75970816e1245094c38c5247fa</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\preview3\tools\dotnet-migrate.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">d06406268b9b80ad682386e8e1e5a9cdd6be9add</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">09e8dbc8d8b4ff6afc03c490cf63363b102a64a2</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">53aa35d54b08ce1c3ed88508ce45fa970fef93a0</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">df41a6b7c8aac0b82b1ca0cf63287e9545a7281e</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -28,8 +28,8 @@
           <source>Name</source>
           <target state="translated">Nome</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>dotnet-migrate -- Migrates a Preview 2 .NET Core project to Preview 4 .NET Core project</source>
-          <target state="translated">dotnet-migrate: consente di eseguire la migrazione di un progetto .Net Core dall'anteprima 2 all'anteprima 4</target>       </trans-unit>
+          <source>dotnet-migrate -- Migrates a Preview 2 .NET Core project to RC4 .NET Core project</source>
+          <target state="translated">dotnet-migrate: consente di eseguire la migrazione di un progetto .NET Core dall'anteprima 2 alla versione RC4</target>       </trans-unit>
         <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Synopsis</source>
           <target state="translated">Riepilogo</target>       </trans-unit>
@@ -37,8 +37,8 @@
           <source>Description</source>
           <target state="translated">Descrizione</target>       </trans-unit>
         <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>The <ph id="ph1">`dotnet migrate`</ph> command will migrate a valid Preview 2 <ph id="ph2">`project.json`</ph> based project to a valid Preview 4 <ph id="ph3">`csproj`</ph> project.</source>
-          <target state="translated">Il comando <ph id="ph1">`dotnet migrate`</ph> eseguirà la migrazione di un progetto valido dell'anteprima 2 basato su <ph id="ph2">`project.json`</ph> a un progetto <ph id="ph3">`csproj`</ph> valido dell'anteprima 4.</target>       </trans-unit>
+          <source>The <ph id="ph1">`dotnet migrate`</ph> command will migrate a valid Preview 2 <ph id="ph2">`project.json`</ph> based project to a valid RC4 <ph id="ph3">`csproj`</ph> project.</source>
+          <target state="translated">Il comando <ph id="ph1">`dotnet migrate`</ph> eseguirà la migrazione di un progetto valido dell'anteprima 2 basato su <ph id="ph2">`project.json`</ph> a un progetto <ph id="ph3">`csproj`</ph> valido della versione RC4.</target>       </trans-unit>
         <trans-unit id="110" translate="yes" xml:space="preserve">
           <source>By default, the command will migrate the root project and any project references that the root project contains.</source>
           <target state="translated">Per impostazione predefinita, il comando eseguirà la migrazione del progetto radice e dei riferimenti del progetto contenuti dal progetto radice.</target>       </trans-unit>
@@ -70,8 +70,8 @@
           <source>If you use the <ph id="ph1">`--report-file`</ph> option, that output will also be saved to a file that you specify.</source>
           <target state="translated">Se si usa l'opzione <ph id="ph1">`--report-file`</ph>, tale output verrà salvato anche in un file specificato.</target>       </trans-unit>
         <trans-unit id="120" translate="yes" xml:space="preserve">
-          <source>As of Preview 4, the <ph id="ph1">`dotnet migrate`</ph> command only supports valid Preview 2 <ph id="ph2">`project.json`</ph> files.</source>
-          <target state="translated">A partire dall'anteprima 4, il comando <ph id="ph1">`dotnet migrate`</ph> supporta solo file <ph id="ph2">`project.json`</ph> validi dell'anteprima 2.</target>       </trans-unit>
+          <source>As of RC4, the <ph id="ph1">`dotnet migrate`</ph> command only supports valid Preview 2 <ph id="ph2">`project.json`</ph> files.</source>
+          <target state="translated">A partire dalla versione RC4, il comando <ph id="ph1">`dotnet migrate`</ph> supporta solo file <ph id="ph2">`project.json`</ph> validi dell'anteprima 2.</target>       </trans-unit>
         <trans-unit id="121" translate="yes" xml:space="preserve">
           <source>This means that you cannot use it to migrate old DNX or Preview 1 <ph id="ph1">`project.json`</ph> files directly to csproj; you first need to migrate them to Preview 2 project.json files and then to csproj files.</source>
           <target state="translated">Ciò significa che non è possibile usarlo per eseguire la migrazione di file <ph id="ph1">`project.json`</ph> DNX o dell'anteprima 1 direttamente in csproj. È necessario innanzitutto eseguire la migrazione di tali file ai file project.json dell'anteprima 2 e quindi ai file csproj.</target>       </trans-unit>
